# Digital-CRM-Hackathon5

./: .gitignore  AGENTS.md  GEMINI.md  SKILL.md  docker-compose.yml  skills-lock.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
backend/: .gitignore  check_db.py  pyproject.toml  test_config.py
backend/app/: main.py
backend/app/ai/: agent.py
backend/app/api/v1/webhooks/: gmail.py  web_form.py  whatsapp.py
backend/app/core/: config.py  kafka_producer.py  outbox_relay.py  sentiment.py
backend/app/db/: crud.py  database.py  init_db.py  models.py
backend/app/workers/: main_worker.py
backend/tests/: conftest.py  e2e_traffic_simulator.py  test_ai_agent_logic.py  test_db.py
backend/tests/api/v1/: test_web_form.py
backend/tests/workers/: reproduce_worker_state.py  test_integration.py  test_main_worker.py  test_main_worker_retry.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: SupportForm.tsx
k8s/: deployment.yaml  hpa.yaml  service.yaml
specs/001-worker-ai-db-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/050-crm-db-foundations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/051-web-support-form/: spec.md
specs/052-web-support-form/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/053-support-form-ui-refactor/: spec.md
specs/054-support-form-ui-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md
(+98 files in other folders)
