[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "confluent-kafka>=2.13.2",
    "fastapi[standard]>=0.135.1",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "twilio>=9.10.3",
    "uvicorn[standard]>=0.42.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
